Logout user and UserProfile to be able to change username and save it in the database

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,13 +6,13 @@
         app:icon="@drawable/ic_baseline_account_circle_24"
         app:title="@string/messages_header">
 
-        <EditTextPreference
-            app:key="signature"
+        <Preference
+            app:key="userProfile"
             app:title="@string/signature_title"
             app:useSimpleSummaryProvider="true" />
 
         <Preference
-            app:key="toastMsg"
+            app:key="logoutButton"
             app:title="Logout" />
 
     </PreferenceCategory>
