--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,7 +32,8 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_marginTop="20dp"
         android:id="@+id/profile"
         android:layout_width="match_parent"
@@ -40,13 +41,30 @@
         android:src="@drawable/prof_settings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"></ImageView>
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        app:civ_border_color="@color/black"
+        app:civ_border_width="3dp" ></de.hdodenhof.circleimageview.CircleImageView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/upload_photo"
+        android:layout_width="215dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/button_edit_profile"
+        android:gravity="center"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="upload photo"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/profile"
+        app:layout_constraintTop_toBottomOf="@+id/profile" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/edit_username_btn"
         android:layout_width="215dp"
         android:layout_height="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button_edit_profile"
         android:gravity="center"
         android:paddingStart="20dp"
@@ -55,13 +73,13 @@
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/profile"
-        app:layout_constraintTop_toBottomOf="@+id/profile" />
+        app:layout_constraintTop_toBottomOf="@+id/upload_photo" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_marginTop="20dp"
         android:id="@+id/edit_email_btn"
         android:layout_width="215dp"
         android:layout_height="30dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/button_edit_profile"
         android:gravity="center"
         android:paddingStart="20dp"
