--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,8 +8,8 @@
     android:orientation="vertical"
     tools:context=".ui.settings.SettingsFragment">
 
-    <ImageView
-        android:id="@+id/profile"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_fragment"
         android:layout_width="147dp"
         android:layout_height="149dp"
         android:src="@drawable/prof_settings"
@@ -18,15 +18,17 @@
         app:layout_constraintHorizontal_bias="0.219"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.103">
-    </ImageView>
+        app:layout_constraintVertical_bias="0.103"
+        app:civ_border_color="@color/black"
+        app:civ_border_width="3dp"></de.hdodenhof.circleimageview.CircleImageView>
+
 
     <ImageView
         android:id="@+id/settings"
         android:layout_width="53dp"
         android:layout_height="36dp"
         android:src="@drawable/ic_baseline_settings_24"
-        app:layout_constraintBottom_toTopOf="@+id/profile"
+        app:layout_constraintBottom_toTopOf="@+id/profile_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/userName"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,8 +45,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toTopOf="@+id/profile" />
+        app:layout_constraintStart_toEndOf="@+id/profile_fragment"
+        app:layout_constraintTop_toTopOf="@+id/profile_fragment" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/edit_profile_btn"
@@ -56,10 +58,10 @@
         android:paddingEnd="20dp"
         android:text="Edit Profile"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/profile"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_fragment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toTopOf="@+id/profile"
+        app:layout_constraintStart_toEndOf="@+id/profile_fragment"
+        app:layout_constraintTop_toTopOf="@+id/profile_fragment"
         app:layout_constraintVertical_bias="0.697" />
 
     <TextView
@@ -71,9 +73,9 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/profile"
-        app:layout_constraintStart_toStartOf="@+id/profile"
-        app:layout_constraintTop_toBottomOf="@+id/profile"
+        app:layout_constraintEnd_toEndOf="@+id/profile_fragment"
+        app:layout_constraintStart_toStartOf="@+id/profile_fragment"
+        app:layout_constraintTop_toBottomOf="@+id/profile_fragment"
         app:layout_constraintVertical_bias="0.074" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
